tests/extproc/envoy_dynamic_modules.yaml
# Copyright Envoy AI Gateway Authors
# SPDX-License-Identifier: Apache-2.0
# The full text of the Apache license is available in the LICENSE file at
# the root of the repo.

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 1062
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                access_log:
                  - name: log_used_token
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        json_format:
                          used_token: "%DYNAMIC_METADATA(io.envoy.ai_gateway:used_token)%"
                          some_cel: "%DYNAMIC_METADATA(io.envoy.ai_gateway:some_cel)%"
                  - name: log_used_token3
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                  - name: log_used_token2
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog
                route_config:
                  virtual_hosts:
                    - name: local_route
                      # TODO: move this at route level to match the behavior of EG.
                      retry_policy:
                        retry_on: "5xx,gateway-error,reset,rest-before-request,connect-failure,envoy-ratelimited,retriable-4xx,refused-stream,retriable-status-codes,retriable-headers"
                        num_retries: 5
                        per_try_timeout: "30s"
                        retry_priority:
                          name: envoy.retry_priorities.previous_priorities
                          typedConfig:
                            "@type": type.googleapis.com/envoy.extensions.retry.priority.previous_priorities.v3.PreviousPrioritiesConfig
                            updateFrequency: 1
                        retry_back_off:
                          base_interval: "0.1s"
                          max_interval: "1s"
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: us.meta.llama3-2-1b-instruct-v1:0
                          route:
                            auto_host_rewrite: true
                            cluster: aws_bedrock
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: claude-sonnet-4-5
                          route:
                            auto_host_rewrite: true
                            cluster: anthropic
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: global.anthropic.claude-sonnet-4-5-20250929-v1:0
                          route:
                            auto_host_rewrite: true
                            cluster: anthropic_aws_bedrock
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: us.anthropic.claude-3-5-sonnet-20240620-v1:0
                          route:
                            auto_host_rewrite: true
                            cluster: aws_bedrock
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: gpt-4o-mini
                          route:
                            auto_host_rewrite: true
                            cluster: openai
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: text-embedding-3-small
                          route:
                            auto_host_rewrite: true
                            cluster: openai
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: o1
                          route:
                            auto_host_rewrite: true
                            cluster: azure_openai
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: gemini-2.0-flash-lite
                          route:
                            auto_host_rewrite: true
                            cluster: gemini
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: gemini-embedding-001
                          route:
                            auto_host_rewrite: true
                            cluster: gemini
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: llama-3.1-8b-instant
                          route:
                            auto_host_rewrite: true
                            cluster: groq
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: grok-3
                          route:
                            auto_host_rewrite: true
                            cluster: grok
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: Meta-Llama-3.1-8B-Instruct
                          route:
                            auto_host_rewrite: true
                            cluster: sambanova
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: E5-Mistral-7B-Instruct
                          route:
                            auto_host_rewrite: true
                            cluster: sambanova
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: meta-llama/Meta-Llama-3-8B-Instruct
                          route:
                            auto_host_rewrite: true
                            cluster: deepinfra
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-ai-eg-model
                                string_match:
                                  exact: BAAI/bge-base-en-v1.5
                          route:
                            auto_host_rewrite: true
                            cluster: deepinfra
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-test-backend
                                string_match:
                                  exact: openai
                          route:
                            cluster: testupstream-openai
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-test-backend
                                string_match:
                                  exact: anthropic
                          route:
                            cluster: testupstream-anthropic
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-test-backend
                                string_match:
                                  exact: modelname-override
                          route:
                            cluster: testupstream-modelname-override
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-test-backend
                                string_match:
                                  exact: aws-bedrock
                          route:
                            cluster: testupstream-aws
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-test-backend
                                string_match:
                                  exact: azure-openai
                          route:
                            cluster: testupstream-azure
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-test-backend
                                string_match:
                                  exact: gcp-vertexai
                          route:
                            cluster: testupstream-gcp-vertexai
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-test-backend
                                string_match:
                                  exact: gcp-anthropicai
                          route:
                            cluster: testupstream-gcp-anthropicai
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-test-backend
                                string_match:
                                  exact: aws-anthropic
                          route:
                            cluster: testupstream-aws-anthropic
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-test-backend
                                string_match:
                                  exact: modelname-override-and-fallback
                          route:
                            cluster: testupstream-modelname-override-and-fallback
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-test-backend
                                string_match:
                                  exact: body-mutation
                          route:
                            cluster: testupstream-body-mutation
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-test-backend
                                string_match:
                                  exact: body-mutation-anthropic
                          route:
                            cluster: testupstream-body-mutation-anthropic
                http_filters:
                  - name: ai_gateway.upstream
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                      dynamic_module_config:
                        name: aigateway
                        do_not_close: true
                      filter_name: ai_gateway.router
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      suppressEnvoyHeaders: true

  clusters:
    - name: testupstream-openai
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: testupstream-openai
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "testupstream-openai"
    - name: testupstream-anthropic
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: testupstream-anthropic
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "testupstream-anthropic"
    - name: testupstream-modelname-override-and-fallback
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: testupstream-modelname-override-and-fallback
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "testupstream-openai-5xx"
            priority: 0 # Primary.
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "testupstream-openai"
            priority: 1 # Secondary.
    - name: testupstream-modelname-override
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: testupstream-modelname-override
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "testupstream-modelname-override"
    - name: testupstream-aws
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: testupstream-aws
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "testupstream-aws"
    - name: testupstream-azure
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: testupstream-azure
        endpoints:
          - priority: 0 # Primary.
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 1066
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "always-failing-backend"
          - priority: 1 # Secondary.
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "testupstream-azure"
    - name: aws_bedrock
      connect_timeout: 30s
      type: STRICT_DNS
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: aws_bedrock
        endpoints:
          - priority: 0 # Primary.
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 1067 # Speaks TLS.
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "always-failing-backend"
          - priority: 1 # Secondary.
            lb_endpoints:
              - endpoint:
                  hostname: bedrock-runtime.us-east-1.amazonaws.com
                  address:
                    socket_address:
                      address: bedrock-runtime.us-east-1.amazonaws.com
                      port_value: 443
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "aws-bedrock"
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          auto_host_sni: true
    - name: anthropic_aws_bedrock
      connect_timeout: 30s
      type: STRICT_DNS
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: anthropic_aws_bedrock
        endpoints:
          - lb_endpoints:
              - endpoint:
                  hostname: bedrock-runtime.us-east-1.amazonaws.com
                  address:
                    socket_address:
                      address: bedrock-runtime.us-east-1.amazonaws.com
                      port_value: 443
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "anthropic-aws-bedrock"
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          auto_host_sni: true
    - name: testupstream-gcp-vertexai
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: testupstream-gcp-vertexai
        endpoints:
          - priority: 0
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "testupstream-gcp-vertexai"
    - name: testupstream-gcp-anthropicai
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: testupstream-gcp-anthropicai
        endpoints:
          - priority: 0
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "testupstream-gcp-anthropicai"
    - name: testupstream-aws-anthropic
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: lua
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                default_source_code:
                  inline_string: |
                    function envoy_on_request(handle)
                      local headers = handle:headers()
                      for k, v in pairs(headers) do
                        handle:logErr("Header: " .. k .. " = " .. v)
                      end
                      local body = handle:body(false)
                      local data = body:getBytes(0, body:length())
                      handle:logErr(tostring(data))
                    end
                    function envoy_on_response(handle)
                    end
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: testupstream-aws-anthropic
        endpoints:
          - priority: 0
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "testupstream-aws-anthropic"
    - name: openai
      connect_timeout: 30s
      type: STRICT_DNS
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: openai
        endpoints:
          - priority: 0 # Primary.
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 1067 # Speaks TLS.
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "always-failing-backend"
          - priority: 1 # Secondary.
            lb_endpoints:
              - endpoint:
                  hostname: api.openai.com
                  address:
                    socket_address:
                      address: api.openai.com
                      port_value: 443
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "openai"
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          auto_host_sni: true
    - name: anthropic
      connect_timeout: 30s
      type: STRICT_DNS
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: anthropic
        endpoints:
          - lb_endpoints:
              - endpoint:
                  hostname: api.anthropic.com
                  address:
                    socket_address:
                      address: api.anthropic.com
                      port_value: 443
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "anthropic"
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          auto_host_sni: true
    - name: azure_openai
      connect_timeout: 30s
      type: STRICT_DNS
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: azure_openai
        endpoints:
          - priority: 0 # Primary.
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 1067 # Speaks TLS.
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "always-failing-backend"
          - priority: 1 # Secondary.
            lb_endpoints:
              - endpoint:
                  hostname: <azure_resource_name>.openai.azure.com # Replace with your azure resource name
                  address:
                    socket_address:
                      address: <azure_resource_name>.openai.azure.com # Replace with your azure resource name
                      port_value: 443
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "azure-openai"
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          auto_host_sni: true
    - name: original_destination_cluster
      connectTimeout: 30s
      type: ORIGINAL_DST
      lbPolicy: CLUSTER_PROVIDED
      originalDstLbConfig:
        httpHeaderName: x-ai-eg-original-dst
        useHttpHeader: true
    - name: gemini
      connect_timeout: 30s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: gemini
        endpoints:
          - lb_endpoints:
              - endpoint:
                  hostname: generativelanguage.googleapis.com
                  address:
                    socket_address:
                      address: generativelanguage.googleapis.com
                      port_value: 443
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "gemini"
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          auto_host_sni: true
    - name: groq
      connect_timeout: 30s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: groq
        endpoints:
          - lb_endpoints:
              - endpoint:
                  hostname: api.groq.com
                  address:
                    socket_address:
                      address: api.groq.com
                      port_value: 443
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "groq"
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          auto_host_sni: true
    - name: grok
      connect_timeout: 30s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: grok
        endpoints:
          - lb_endpoints:
              - endpoint:
                  hostname: api.x.ai
                  address:
                    socket_address:
                      address: api.x.ai
                      port_value: 443
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "grok"
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          auto_host_sni: true
    - name: sambanova
      connect_timeout: 30s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: sambanova
        endpoints:
          - lb_endpoints:
              - endpoint:
                  hostname: api.sambanova.ai
                  address:
                    socket_address:
                      address: api.sambanova.ai
                      port_value: 443
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "sambanova"
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          auto_host_sni: true
    - name: deepinfra
      connect_timeout: 30s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      outlier_detection:
        consecutive_5xx: 1
        interval: 1s
        base_ejection_time: 2s # Must be smaller than the require.Eventually's interval. Otherwise, the tests may pass without going through the fallback since the always-failing backend could be ejected by the time when require.Eventually retries due to the previous request IF the retry is not configured.
        max_ejection_percent: 100
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: deepinfra
        endpoints:
          - lb_endpoints:
              - endpoint:
                  hostname: api.deepinfra.com
                  address:
                    socket_address:
                      address: api.deepinfra.com
                      port_value: 443
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "deepinfra"
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          auto_host_sni: true
    - name: testupstream-body-mutation
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options:
              accept_http_10: true
              default_host_for_http_10: "127.0.0.1"
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: testupstream-body-mutation
        endpoints:
          - priority: 0
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "testupstream-body-mutation"
    - name: testupstream-body-mutation-anthropic
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options:
              accept_http_10: true
              default_host_for_http_10: "127.0.0.1"
          http_filters:
            - name: ai_gateway.upstream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                dynamic_module_config:
                  name: aigateway
                  do_not_close: true
                filter_name: ai_gateway.upstream
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      load_assignment:
        cluster_name: testupstream-body-mutation-anthropic
        endpoints:
          - priority: 0
            lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
                metadata:
                  filter_metadata:
                    aigateway.envoy.io:
                      per_route_rule_backend_name: "testupstream-body-mutation-anthropic"

overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
    - name: "envoy.resource_monitors.global_downstream_max_connections"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
        max_active_downstream_connections: 1000
